Fixes CTA button padding issue on mobile

--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -110,5 +110,9 @@ div.hero-image {
                 "typing"
                 "buttons";
         }
+
+        div.hero-cta {
+            padding: 2.4rem;
+        }
     }
 }
